--- a/abndnd_suvkcr.release.json
+++ b/abndnd_suvkcr.release.json
@@ -1,27 +1,27 @@
 {
 	"_id": "abndnd_suvkcr.release",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "abndnd_suvkcr.release",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569237775592,
+	"last_scraped": 1570666642469,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569234951066,
-	"edit": 36,
-	"next_scrape": 1569284221797,
+	"updt": 1569237881014,
+	"edit": 37,
+	"next_scrape": 1570712616070,
 	"category": "dice_roller",
-	"last_update": 1569237775592,
+	"last_update": 1570666642469,
 	"output": [
 		{
 			"args": {},
-			"calls": 287053,
+			"calls": 295329,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"## go",
