--- a/uknown_0o896a.big_red_button.json
+++ b/uknown_0o896a.big_red_button.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_0o896a.big_red_button",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_0o896a.big_red_button",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569202795368,
-	"last_scraped": 1569203078135,
+	"last_scraped": 1570666431973,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 13,
-	"next_scrape": 1569203138135,
+	"next_scrape": 1570706261183,
 	"category": "coin_flipper",
-	"last_update": 1569203078135,
+	"last_update": 1570666431973,
 	"output": [
 		{
 			"args": {},
-			"calls": 36152,
+			"calls": 47169,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"me fo",
@@ -70,6 +70,6 @@
 			]
 		}
 	],
-	"updt": 1569202938454,
-	"edit": 1
+	"updt": 1569203164040,
+	"edit": 2
 }
