--- a/uknown_3msky2.k.json
+++ b/uknown_3msky2.k.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_3msky2.k",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_3msky2.k",
 	"sector": "NGC_2868",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569267613845,
+	"last_scraped": 1570666733174,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569264719571,
-	"edit": 49,
-	"next_scrape": 1569313513296,
+	"updt": 1569267649030,
+	"edit": 50,
+	"next_scrape": 1570712463821,
 	"category": "coin_flipper",
-	"last_update": 1569267613845,
+	"last_update": 1570666733174,
 	"output": [
 		{
 			"args": {},
-			"calls": 384028,
+			"calls": 394256,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"hrase",
