--- a/uknown_42opr9.scripts.json
+++ b/uknown_42opr9.scripts.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_42opr9.scripts",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_42opr9.scripts",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569319742386,
+	"last_scraped": 1570666964404,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569316602853,
-	"edit": 64,
-	"next_scrape": 1569364799546,
+	"updt": 1569319762040,
+	"edit": 65,
+	"next_scrape": 1570707341102,
 	"category": "coin_flipper",
-	"last_update": 1569319742386,
+	"last_update": 1570666964404,
 	"output": [
 		{
 			"args": {},
-			"calls": 582272,
+			"calls": 590421,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"LETE ",
