--- a/uknown_4yl1qa.bot_scam_do_not_run.json
+++ b/uknown_4yl1qa.bot_scam_do_not_run.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_4yl1qa.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_4yl1qa.bot_scam_do_not_run",
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569274266117,
+	"last_scraped": 1570666753163,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569271034002,
-	"edit": 49,
-	"next_scrape": 1569318397342,
+	"updt": 1569274416779,
+	"edit": 50,
+	"next_scrape": 1570709536040,
 	"category": "dice_roller",
-	"last_update": 1569274266117,
+	"last_update": 1570666753163,
 	"output": [
 		{
 			"args": {},
-			"calls": 444990,
+			"calls": 451108,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"igned",
