--- a/uknown_ewk6vx.mgb.json
+++ b/uknown_ewk6vx.mgb.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ewk6vx.mgb",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ewk6vx.mgb",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569227339442,
-	"last_scraped": 1569227794785,
+	"last_scraped": 1570666572663,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 1,
-	"next_scrape": 1569227854785,
+	"next_scrape": 1570709511427,
 	"category": "clicker",
-	"last_update": 1569227794785,
+	"last_update": 1570666572663,
 	"output": [
 		{
 			"args": {},
-			"calls": 37228,
+			"calls": 46094,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"\\n1E29",
@@ -52,7 +52,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 36179,
+			"calls": 43043,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"\\n1E29",
@@ -84,7 +84,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 6205,
+			"calls": 7488,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"\\n1E29",
@@ -128,6 +128,6 @@
 			]
 		}
 	],
-	"updt": 1569227743045,
-	"edit": 2
+	"updt": 1569227967659,
+	"edit": 3
 }
