--- a/uknown_l21bqu.public.json
+++ b/uknown_l21bqu.public.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_l21bqu.public",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_l21bqu.public",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569333698386,
+	"last_scraped": 1570667045257,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569331128104,
-	"edit": 72,
-	"next_scrape": 1569374129981,
+	"updt": 1569333832782,
+	"edit": 73,
+	"next_scrape": 1570709757601,
 	"category": "plant_sim",
-	"last_update": 1569333698386,
+	"last_update": 1570667045257,
 	"output": [
 		{
 			"args": {},
@@ -93,6 +93,20 @@
 						"damenta"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 1507,
+			"base": "c:\"yt7uwj\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
+			"fragments": [
+				"scribe",
+				"hing\\\"",
+				" damag",
+				" 'Che'",
+				"nting \\",
+				"l descr",
+				"damenta"
 			]
 		}
 	],
