--- a/uknown_qpa3da.interface.json
+++ b/uknown_qpa3da.interface.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_qpa3da.interface",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_qpa3da.interface",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569228506202,
+	"last_scraped": 1570666622454,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569224811426,
-	"edit": 37,
-	"next_scrape": 1569274635666,
+	"updt": 1569228644814,
+	"edit": 38,
+	"next_scrape": 1570710880099,
 	"category": "dice_roller",
-	"last_update": 1569228506202,
+	"last_update": 1570666622454,
 	"output": [
 		{
 			"args": {},
-			"calls": 331699,
+			"calls": 342411,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"s | B",
