--- a/uknown_w6wlz1.backend_bsa.json
+++ b/uknown_w6wlz1.backend_bsa.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_w6wlz1.backend_bsa",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_w6wlz1.backend_bsa",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569228124871,
+	"last_scraped": 1570666595695,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569224359873,
-	"edit": 34,
-	"next_scrape": 1569273981743,
+	"updt": 1569228191939,
+	"edit": 35,
+	"next_scrape": 1570712448699,
 	"category": "dice_roller",
-	"last_update": 1569228124871,
+	"last_update": 1570666595695,
 	"output": [
 		{
 			"args": {},
-			"calls": 310007,
+			"calls": 317010,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"# Gos",
