--- a/uknown_xcgazw.specs.json
+++ b/uknown_xcgazw.specs.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_xcgazw.specs",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_xcgazw.specs",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569296858260,
+	"last_scraped": 1570666873699,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569293816989,
-	"edit": 58,
-	"next_scrape": 1569342226612,
+	"updt": 1569296979150,
+	"edit": 59,
+	"next_scrape": 1570709369103,
 	"category": "plant_sim",
-	"last_update": 1569296858260,
+	"last_update": 1570666873699,
 	"output": [
 		{
 			"args": {},
@@ -47,6 +47,18 @@
 			"args": {},
 			"calls": 28789,
 			"base": "c:\"95f7hs\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				"that ",
+				"made t",
+				" case ",
+				"to be m",
+				"se to be"
+			]
+		},
+		{
+			"args": {},
+			"calls": 832,
+			"base": "c:\"95f7hs\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"that ",
 				"made t",
