--- a/unknown_3ae6km.recruitment.json
+++ b/unknown_3ae6km.recruitment.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_3ae6km.recruitment",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_3ae6km.recruitment",
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569203670030,
+	"last_scraped": 1570666462262,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569200457594,
-	"edit": 31,
-	"next_scrape": 1569246550398,
+	"updt": 1569203843025,
+	"edit": 32,
+	"next_scrape": 1570708522056,
 	"category": "plant_sim",
-	"last_update": 1569203670030,
+	"last_update": 1570666462262,
 	"output": [
 		{
 			"args": {},
@@ -53,6 +53,21 @@
 			"args": {},
 			"calls": 1965,
 			"base": "c:\"sxfjac\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
+			"fragments": [
+				" 'tra",
+				"st the",
+				"al: sh",
+				" betwe",
+				" qualit",
+				"ve disti",
+				"stablish",
+				"etween '"
+			]
+		},
+		{
+			"args": {},
+			"calls": 592,
+			"base": "c:\"sxfjac\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				" 'tra",
 				"st the",
