--- a/unknown_5umh34.private.json
+++ b/unknown_5umh34.private.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_5umh34.private",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_5umh34.private",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569178935181,
+	"last_scraped": 1570666301611,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569174518716,
-	"edit": 22,
-	"next_scrape": 1569224084367,
+	"updt": 1569179030697,
+	"edit": 23,
+	"next_scrape": 1570711046939,
 	"category": "plant_sim",
-	"last_update": 1569178935181,
+	"last_update": 1570666301611,
 	"output": [
 		{
 			"args": {},
@@ -47,6 +47,21 @@
 						"aria mu"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 668,
+			"base": "c:\"gmmxgj\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
+			"fragments": [
+				"ot a ",
+				"There",
+				"s cons",
+				" not a",
+				" must ",
+				"sensus ",
+				"ria mus",
+				"aria mu"
 			]
 		}
 	],
