--- a/unknown_qmw1np.mpet.json
+++ b/unknown_qmw1np.mpet.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_qmw1np.mpet",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_qmw1np.mpet",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569163708689,
+	"last_scraped": 1570666029999,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569163694065,
-	"edit": 23,
-	"next_scrape": 1569205758566,
+	"updt": 1569163919918,
+	"edit": 24,
+	"next_scrape": 1570712061507,
 	"category": "dice_roller",
-	"last_update": 1569163708689,
+	"last_update": 1570666029999,
 	"output": [
 		{
 			"args": {},
-			"calls": 155635,
+			"calls": 161868,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"wish ",
