--- a/unknown_tg52f6.and_down_smash.json
+++ b/unknown_tg52f6.and_down_smash.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_tg52f6.and_down_smash",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_tg52f6.and_down_smash",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569293546261,
+	"last_scraped": 1570666864624,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569290432947,
-	"edit": 56,
-	"next_scrape": 1569337531375,
+	"updt": 1569293591695,
+	"edit": 57,
+	"next_scrape": 1570712339938,
 	"category": "coin_flipper",
-	"last_update": 1569293546261,
+	"last_update": 1570666864624,
 	"output": [
 		{
 			"args": {},
-			"calls": 478565,
+			"calls": 484836,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"e tim",
