--- a/unknown_v4fsde.t3_clean.json
+++ b/unknown_v4fsde.t3_clean.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_v4fsde.t3_clean",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_v4fsde.t3_clean",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569238578009,
+	"last_scraped": 1570666672941,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569238557695,
-	"edit": 44,
-	"next_scrape": 1569279187959,
+	"updt": 1569238782545,
+	"edit": 45,
+	"next_scrape": 1570711867907,
 	"category": "plant_sim",
-	"last_update": 1569238578009,
+	"last_update": 1570666672941,
 	"output": [
 		{
 			"args": {},
@@ -61,6 +61,17 @@
 						"0 0000\\n0"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 744,
+			"base": "c:\"rb3zcq\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
+			"fragments": [
+				"00\\n000",
+				" 0100 0",
+				"0000 000",
+				"0 0000\\n0"
 			]
 		}
 	],
