--- a/unknown_wt9h2y.flush.json
+++ b/unknown_wt9h2y.flush.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_wt9h2y.flush",
 	"type": "fragment",
-	"mode": "dead",
+	"mode": "npc",
 	"script": "unknown_wt9h2y.flush",
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1563656292128,
-	"last_scraped": 1569162442965,
+	"last_scraped": 1570665970135,
 	"script_log": [
 		{
 			"type": "added",
@@ -30,16 +30,16 @@
 		}
 	],
 	"pl_output": ":flush: 0\n{\"ok\":false,\"msg\":\"Your account balance of 0GC is too low to send 1GC.\"}",
-	"next_scrape": 1569252779370,
-	"updt": 1569162565643,
-	"edit": 140,
+	"next_scrape": 1570707459432,
+	"updt": 1569270356432,
+	"edit": 141,
 	"scrape_ct": 17,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1569162442965,
+	"last_update": 1570665970135,
 	"output": [
 		{
 			"args": {},
-			"calls": 764,
+			"calls": 908,
 			"base": ":flush: 0\n{\"ok\":false,\"msg\":\"Your account balance of 0GC is too low to send 1GC.\"}",
 			"fragments": [
 				"ticali",
