--- a/uknown_lqxcau.bestgrade.json
+++ b/uknown_lqxcau.bestgrade.json
@@ -1,20 +1,20 @@
 {
 	"_id": "uknown_lqxcau.bestgrade",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "player",
 	"script": "uknown_lqxcau.bestgrade",
 	"sector": "HJG_0153",
 	"sec_level": 3,
 	"date_added": 1563655647379,
-	"last_scraped": 1569332684872,
+	"last_scraped": 1570666995384,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563655647379
 		}
 	],
-	"updt": 1569330001310,
-	"edit": 306,
+	"updt": 1569332706659,
+	"edit": 307,
 	"pl_output": "Cannot read property 'type' of undefined",
-	"next_scrape": 1569415475333
+	"next_scrape": 1570748133700
 }
