--- a/uknown_xr3578.random.json
+++ b/uknown_xr3578.random.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_xr3578.random",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_xr3578.random",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569263180050,
-	"last_scraped": 1569357876598,
+	"last_scraped": 1570667056890,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569263180050
 		}
 	],
-	"next_scrape": 1569404265569,
+	"next_scrape": 1570713194985,
 	"category": "plant_sim",
-	"last_update": 1569357876598,
+	"last_update": 1570667056890,
 	"output": [
 		{
 			"args": {},
@@ -42,6 +42,19 @@
 					]
 				}
 			]
+		},
+		{
+			"args": {},
+			"calls": 255,
+			"base": "c:\"zdlx60\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
+			"fragments": [
+				"d wha",
+				"C3 Oh",
+				"And w",
+				"s my d",
+				"3 Oh, v",
+				"sign?\\n2"
+			]
 		}
 	],
 	"identified": [
@@ -57,6 +70,6 @@
 			]
 		}
 	],
-	"updt": 1569355490059,
-	"edit": 34
+	"updt": 1569357971927,
+	"edit": 35
 }
