--- a/derelict_clrnxi.db.json
+++ b/derelict_clrnxi.db.json
@@ -1,27 +1,27 @@
 {
 	"_id": "derelict_clrnxi.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "derelict_clrnxi.db",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569470347967,
+	"last_scraped": 1570667395555,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569467798284,
-	"edit": 126,
-	"next_scrape": 1569515325357,
+	"updt": 1569470502087,
+	"edit": 127,
+	"next_scrape": 1570709774459,
 	"category": "dice_roller",
-	"last_update": 1569470347967,
+	"last_update": 1570667395555,
 	"output": [
 		{
 			"args": {},
-			"calls": 1059008,
+			"calls": 1069751,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"t. ##",
