--- a/uknown_el1qyf.access_data.json
+++ b/uknown_el1qyf.access_data.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_el1qyf.access_data",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_el1qyf.access_data",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569406996016,
+	"last_scraped": 1570667246146,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569404665229,
-	"edit": 96,
-	"next_scrape": 1569449574141,
+	"updt": 1569407144423,
+	"edit": 97,
+	"next_scrape": 1570710794499,
 	"category": "dice_roller",
-	"last_update": 1569406996016,
+	"last_update": 1570667246146,
 	"output": [
 		{
 			"args": {},
-			"calls": 844124,
+			"calls": 848362,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"21C7 ",
