--- a/uknown_glqjgs.random.json
+++ b/uknown_glqjgs.random.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_glqjgs.random",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_glqjgs.random",
 	"sector": "NGC_1069",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569605298388,
+	"last_scraped": 1570667557224,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569603319974,
-	"edit": 177,
-	"next_scrape": 1569651314552,
+	"updt": 1569605355060,
+	"edit": 178,
+	"next_scrape": 1570711469775,
 	"category": "coin_flipper",
-	"last_update": 1569605298388,
+	"last_update": 1570667557224,
 	"output": [
 		{
 			"args": {},
-			"calls": 1561886,
+			"calls": 1568577,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"w you",
