--- a/unknown_si4i7s.bot_brain.json
+++ b/unknown_si4i7s.bot_brain.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_si4i7s.bot_brain",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_si4i7s.bot_brain",
 	"sector": "VNP_7267",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569570787062,
+	"last_scraped": 1570667507755,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569568812475,
-	"edit": 160,
-	"next_scrape": 1569613547933,
+	"updt": 1569570843814,
+	"edit": 161,
+	"next_scrape": 1570708018164,
 	"category": "coin_flipper",
-	"last_update": 1569570787062,
+	"last_update": 1570667507755,
 	"output": [
 		{
 			"args": {},
-			"calls": 1418004,
+			"calls": 1421938,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"y've ",
