--- a/uknown_lqxcau.ei701.json
+++ b/uknown_lqxcau.ei701.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lqxcau.ei701",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "player",
 	"script": "uknown_lqxcau.ei701",
 	"sector": "K_3221",
 	"sec_level": 4,
 	"date_added": 1563655759056,
-	"last_scraped": 1569697284088,
+	"last_scraped": 1570667646929,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,7 +14,7 @@
 		}
 	],
 	"pl_output": "                              `F___________  __________    ____`\n                              `F|_________ \\ 0000000000   /   |`\n                              `F         / / 0        0  / /| |`\n                              `F        / /  0        0 /_/ | |`\n                              `F       / /   0        0     | |`\n                              `F      / /    0        0     | |`\n                              `F     / /     0        0     | |`\n                              `F    / /      0        0     | |`\n                              `Fei /_/       0000000000     | |`\n                                               \n                                  `F= hackmud art gallery =`\n                                  `0Last update: 190111.1859`\n\n`FSEARCHING`\nUse `Na`:`V\"show\"` with the parameter `Nname` to show an art by name.\n\n`FLISTING`\nUse `Na`:`V\"list\"` to list out all the art we have.\n\n`FSHARING`\nUse `Na`:`V\"share\"` to share an image in a chat! You can specify a `Nchannel`, and you can set `Nshift` to `Vtrue` for a different look!\n\n`0made by skiilaa`",
-	"next_scrape": 1569787022598,
-	"updt": 1569695628234,
-	"edit": 567
+	"next_scrape": 1570754278158,
+	"updt": 1569697427598,
+	"edit": 568
 }
