--- a/uknown_n1rumf.defender_auth.json
+++ b/uknown_n1rumf.defender_auth.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_n1rumf.defender_auth",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_n1rumf.defender_auth",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569504622169,
+	"last_scraped": 1570667466054,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569502510366,
-	"edit": 134,
-	"next_scrape": 1569545791113,
+	"updt": 1569504765783,
+	"edit": 135,
+	"next_scrape": 1570714244628,
 	"category": "dice_roller",
-	"last_update": 1569504622169,
+	"last_update": 1570667466054,
 	"output": [
 		{
 			"args": {},
-			"calls": 1260459,
+			"calls": 1271394,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"mited",
