--- a/unknown_f43glc.pub_7lfra1.json
+++ b/unknown_f43glc.pub_7lfra1.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_f43glc.pub_7lfra1",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_f43glc.pub_7lfra1",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569493784529,
+	"last_scraped": 1570667408012,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569491916212,
-	"edit": 131,
-	"next_scrape": 1569538695328,
+	"updt": 1569493944105,
+	"edit": 132,
+	"next_scrape": 1570710127773,
 	"category": "coin_flipper",
-	"last_update": 1569493784529,
+	"last_update": 1570667408012,
 	"output": [
 		{
 			"args": {},
-			"calls": 1229136,
+			"calls": 1236373,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"X7B_S",
