--- a/uknown_864wmx.botnet.json
+++ b/uknown_864wmx.botnet.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_864wmx.botnet",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "player",
 	"script": "uknown_864wmx.botnet",
 	"sector": "K_6492",
 	"sec_level": 0,
 	"date_added": 1563311632921,
-	"last_scraped": 1570375511996,
+	"last_scraped": 1570668673887,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,7 +22,7 @@
 		]
 	],
 	"pl_output": "Shoo.",
-	"next_scrape": 1570458903423,
-	"updt": 1570374787377,
-	"edit": 1264
+	"next_scrape": 1570752630441,
+	"updt": 1570375691007,
+	"edit": 1265
 }
