--- a/unknown_srj679.public.json
+++ b/unknown_srj679.public.json
@@ -1,20 +1,20 @@
 {
 	"_id": "unknown_srj679.public",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "player",
 	"script": "unknown_srj679.public",
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1570224703381,
-	"last_scraped": 1570250338043,
+	"last_scraped": 1570668179803,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1570224703381
 		}
 	],
-	"pl_output": "{\"ok\":false,\"msg\":\"RUNTIME ERROR amal_robo.public: Shift operation is currently in progress. 256s remain\"}",
-	"next_scrape": 1570343788842,
-	"updt": 1570250348746,
-	"edit": 21
+	"pl_output": "Please specify a command with see:\"<command name>\"->\"-- access directory with see:\"personnel\"",
+	"next_scrape": 1570760088777,
+	"updt": 1570251698019,
+	"edit": 22
 }
