--- a/uknown_k3hkgg.translate.json
+++ b/uknown_k3hkgg.translate.json
@@ -6,29 +6,37 @@
 	"sector": "HJG_8307",
 	"sec_level": 4,
 	"date_added": 1562336992224,
-	"last_scraped": 1570594885048,
+	"last_scraped": 1570669126539,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562336992224
 		}
 	],
-	"updt": 1568686193659,
-	"edit": 4,
-	"next_scrape": 1570636771243,
+	"updt": 1570601454412,
+	"edit": 5,
+	"next_scrape": 1570715865814,
 	"category": "clicker",
-	"last_update": 1570594885048,
+	"last_update": 1570669126539,
 	"output": [
 		{
 			"args": {},
-			"calls": 30552,
+			"calls": 34702,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
+				"stion",
 				"estio",
+				"\\n1E43",
 				"not. I ",
-				"I suppo",
+				"e not. ",
+				"\\n1E45 ",
 				" a ques",
-				"ot. I ha"
+				"ppose no",
+				"ot. I ha",
+				"on, Mall",
+				"ne?\\n1E4",
+				"a questi",
+				"I suppos"
 			],
 			"hits": [
 				{
@@ -47,14 +55,22 @@
 			"args": {
 				"click": true
 			},
-			"calls": 15603,
+			"calls": 23240,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
+				"stion",
 				"estio",
+				"\\n1E43",
 				"not. I ",
-				"I suppo",
+				"e not. ",
+				"\\n1E45 ",
 				" a ques",
-				"ot. I ha"
+				"ppose no",
+				"ot. I ha",
+				"on, Mall",
+				"ne?\\n1E4",
+				"a questi",
+				"I suppos"
 			],
 			"hits": [
 				{
@@ -73,7 +89,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 5993,
+			"calls": 7284,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"stion",
