--- a/unknown_b5i9v6.giga_flare.json
+++ b/unknown_b5i9v6.giga_flare.json
@@ -6,33 +6,41 @@
 	"sector": "NGC_4554",
 	"sec_level": 4,
 	"date_added": 1562878280162,
-	"last_scraped": 1570594904136,
+	"last_scraped": 1570669158244,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562878280162
 		}
 	],
-	"next_scrape": 1570641312663,
+	"next_scrape": 1570715809506,
 	"category": "fishie_tank",
-	"last_update": 1570594904136,
+	"last_update": 1570669158244,
 	"output": [
 		{
 			"args": {},
-			"calls": 270601,
+			"calls": 278182,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
+				"ospac",
 				"ory, ",
+				"ot, pr",
+				"d i am",
 				"ace th",
+				", like",
+				"robably",
 				"much, a",
 				"like in",
 				"ike a l",
 				" like a",
 				"too much",
 				"m pretty",
+				"ke infos",
 				"h, and i",
 				"ably too",
-				" infospa"
+				" infospa",
+				" i am pr",
+				" a lot, "
 			],
 			"hits": [
 				{
@@ -53,7 +61,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 26727,
+			"calls": 27659,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -61,17 +69,25 @@
 				"they don't look so good"
 			],
 			"fragments": [
+				"ospac",
 				"ory, ",
+				"ot, pr",
+				"d i am",
 				"ace th",
+				", like",
+				"robably",
 				"much, a",
 				"like in",
 				"ike a l",
 				" like a",
 				"too much",
 				"m pretty",
+				"ke infos",
 				"h, and i",
 				"ably too",
-				" infospa"
+				" infospa",
+				" i am pr",
+				" a lot, "
 			],
 			"hits": [
 				{
@@ -92,7 +108,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 305352,
+			"calls": 309316,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"ospac",
@@ -145,6 +161,6 @@
 			]
 		}
 	],
-	"updt": 1568686868119,
-	"edit": 24
+	"updt": 1570601678680,
+	"edit": 25
 }
