--- a/unknown_2xy62r.brainfuck.json
+++ b/unknown_2xy62r.brainfuck.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_2xy62r.brainfuck",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_2xy62r.brainfuck",
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565571670801,
-	"last_scraped": 1570595276962,
+	"last_scraped": 1570670001824,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,23 +14,28 @@
 		}
 	],
 	"scrape_ct": 17,
-	"next_scrape": 1570636003513,
+	"next_scrape": 1570710196720,
 	"category": "clicker",
-	"last_update": 1570595276962,
+	"last_update": 1570670001824,
 	"output": [
 		{
 			"args": {},
-			"calls": 85258,
+			"calls": 98606,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"nal c",
 				"al ci",
+				". I'm",
+				" room",
 				" at w",
 				" leave",
+				"rage hu",
 				"One: no",
 				" helps.",
 				"to consi",
+				"o: why n",
 				"erstandi",
+				"e-patter",
 				" free wi"
 			],
 			"hits": [
@@ -70,17 +75,22 @@
 			"args": {
 				"click": true
 			},
-			"calls": 77110,
+			"calls": 82312,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"nal c",
 				"al ci",
+				". I'm",
+				" room",
 				" at w",
 				" leave",
+				"rage hu",
 				"One: no",
 				" helps.",
 				"to consi",
+				"o: why n",
 				"erstandi",
+				"e-patter",
 				" free wi"
 			],
 			"hits": [
@@ -172,8 +182,8 @@
 			]
 		}
 	],
-	"updt": 1568694769774,
-	"edit": 11,
+	"updt": 1570601904054,
+	"edit": 12,
 	"identified": [
 		{
 			"document": "Cycle/Don Quixote",
@@ -204,6 +214,11 @@
 			"frags": [
 				" leave"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
