--- a/unknown_a7fi68.meme.json
+++ b/unknown_a7fi68.meme.json
@@ -6,7 +6,7 @@
 	"sector": "K_6458",
 	"sec_level": 4,
 	"date_added": 1566106114953,
-	"last_scraped": 1570595328277,
+	"last_scraped": 1570670142346,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,18 +14,25 @@
 		}
 	],
 	"scrape_ct": 6,
-	"next_scrape": 1570637405786,
+	"next_scrape": 1570714357159,
 	"category": "clicker",
-	"last_update": 1570595328277,
+	"last_update": 1570670142346,
 	"output": [
 		{
 			"args": {},
-			"calls": 103277,
+			"calls": 108955,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
+				"r sta",
+				"ule: t",
 				"rking p",
 				"le: thi",
+				"ers for",
+				"age 2. ",
 				"shed wor",
+				"rameters",
+				"meters f",
+				"g parame",
 				"e on sch",
 				" schedul"
 			],
@@ -46,12 +53,19 @@
 			"args": {
 				"click": true
 			},
-			"calls": 103018,
+			"calls": 111215,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
+				"r sta",
+				"ule: t",
 				"rking p",
 				"le: thi",
+				"ers for",
+				"age 2. ",
 				"shed wor",
+				"rameters",
+				"meters f",
+				"g parame",
 				"e on sch",
 				" schedul"
 			],
@@ -72,7 +86,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 15984,
+			"calls": 17155,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"r sta",
@@ -114,6 +128,6 @@
 			]
 		}
 	],
-	"updt": 1568695674313,
-	"edit": 11
+	"updt": 1570601904054,
+	"edit": 12
 }
