--- a/uknown_fifxgn.bestgrade.json
+++ b/uknown_fifxgn.bestgrade.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_fifxgn.bestgrade",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_fifxgn.bestgrade",
 	"sector": "HJG_7617",
 	"sec_level": 4,
 	"date_added": 1566251242098,
-	"last_scraped": 1570595730175,
+	"last_scraped": 1570670796601,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 13,
-	"next_scrape": 1570636640881,
+	"next_scrape": 1570714569596,
 	"category": "clicker",
-	"last_update": 1570595730175,
+	"last_update": 1570670796601,
 	"output": [
 		{
 			"args": {},
-			"calls": 70180,
+			"calls": 78004,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"loyee",
@@ -54,7 +54,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 73911,
+			"calls": 78087,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"loyee",
@@ -88,7 +88,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 10658,
+			"calls": 11866,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"loyee",
@@ -119,8 +119,8 @@
 			]
 		}
 	],
-	"updt": 1568714841910,
-	"edit": 12,
+	"updt": 1570602128402,
+	"edit": 13,
 	"identified": [
 		{
 			"document": "Erin File",
