--- a/unknown_yv2hdz.text.json
+++ b/unknown_yv2hdz.text.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_yv2hdz.text",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_yv2hdz.text",
 	"sector": "K_6458",
 	"sec_level": 4,
 	"date_added": 1566086357394,
-	"last_scraped": 1570595718193,
+	"last_scraped": 1570670717896,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,19 +14,23 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1570639149067,
+	"next_scrape": 1570714405398,
 	"category": "clicker",
-	"last_update": 1570595718193,
+	"last_update": 1570670717896,
 	"output": [
 		{
 			"args": {},
-			"calls": 60573,
+			"calls": 68698,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
+				"tor d",
+				"e car",
 				" Seco",
+				"tribut",
 				"ry\\n20",
 				"rds.\\n20",
 				"f course",
+				"course, ",
 				" vector ",
 				"\\n2037 Se"
 			],
@@ -48,13 +52,17 @@
 			"args": {
 				"click": true
 			},
-			"calls": 36183,
+			"calls": 46437,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
+				"tor d",
+				"e car",
 				" Seco",
+				"tribut",
 				"ry\\n20",
 				"rds.\\n20",
 				"f course",
+				"course, ",
 				" vector ",
 				"\\n2037 Se"
 			],
@@ -105,8 +113,8 @@
 			]
 		}
 	],
-	"updt": 1568713941268,
-	"edit": 10,
+	"updt": 1570602128402,
+	"edit": 11,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
@@ -118,6 +126,11 @@
 				" vector ",
 				"\\n2037 Se"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
