--- a/uknown_musmb6.bot_scam_do_not_run.json
+++ b/uknown_musmb6.bot_scam_do_not_run.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_musmb6.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_musmb6.bot_scam_do_not_run",
 	"sector": "NGC_2868",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570599224882,
+	"last_scraped": 1570672202897,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569119934278,
-	"edit": 6,
+	"updt": 1570602581263,
+	"edit": 7,
 	"scrape_ct": 11,
-	"next_scrape": 1570642967630,
+	"next_scrape": 1570717284297,
 	"category": "fishie_tank",
-	"last_update": 1570599224882,
+	"last_update": 1570672211262,
 	"output": [
 		{
 			"args": {},
-			"calls": 33091,
+			"calls": 44157,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"ythin",
@@ -52,7 +52,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 4768,
+			"calls": 5556,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -126,6 +126,11 @@
 				"CT0XF227",
 				"BC7D173\\n"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
