--- a/uknown_o5vbyr.open.json
+++ b/uknown_o5vbyr.open.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_o5vbyr.open",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_o5vbyr.open",
 	"sector": "VNP_9534",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570598873384,
+	"last_scraped": 1570671541290,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569099184678,
-	"edit": 4,
+	"updt": 1570602581263,
+	"edit": 5,
 	"scrape_ct": 15,
-	"next_scrape": 1570642071499,
+	"next_scrape": 1570716750917,
 	"category": "fishie_tank",
-	"last_update": 1570598873384,
+	"last_update": 1570671541290,
 	"output": [
 		{
 			"args": {},
-			"calls": 26023,
+			"calls": 30212,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"help ",
@@ -58,7 +58,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 1411,
+			"calls": 2658,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -99,7 +99,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 12400,
+			"calls": 15147,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"help ",
